--- a/src/styles.css
+++ b/src/styles.css
@@ -5,15 +5,16 @@
 
 @keyframes hello {
   0% {
-    opacity: 0;
+    opacity: 0.1;
     line-height: 0%;
   }
   100% {
-    opacity: 1;
+    opacity: 0.5;
     line-height: 100%;
   }
 }
 
 .new {
-  animation: hello 250ms ease 1 alternate;
+  color: red;
+  animation: hello 350ms ease;
 }
